--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-websockets</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-multipart-provider</artifactId>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
