--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -23,6 +23,11 @@
 ###
 FROM registry.eulix.xyz/collab/infra/infrastructure/ubi8/ubi-minimal:8.3
 
+ARG CI_COMMIT_SHA
+ARG CI_PIPELINE_ID
+ENV CI_COMMIT_SHA=${CI_COMMIT_SHA}
+ENV CI_PIPELINE_ID=${CI_PIPELINE_ID}
+
 ARG JAVA_PACKAGE=java-11-openjdk-headless
 ARG RUN_JAVA_VERSION=1.3.8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
