--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
       <artifactId>quarkus-test-keycloak-server</artifactId>
       <version>2.4.2.Final</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.github.zafarkhaja</groupId>
+      <artifactId>java-semver</artifactId>
+      <version>0.9.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
