--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
       <artifactId>java-semver</artifactId>
       <version>0.9.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-redis-client</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
