更新 .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ qodana:
     paths:
       - qodana/report/
     expose_as: 'Qodana Report'
+    expire_in: 1 mos
   allow_failure: true
 
 sonarqube-check-push:
