--- a/eulixplatform-common/pom.xml
+++ b/eulixplatform-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>eulixplatform-services</artifactId>
         <groupId>xyz.eulix.platform.services</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.13</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
