--- a/eulixplatform-registry/pom.xml
+++ b/eulixplatform-registry/pom.xml
@@ -5,19 +5,18 @@
     <parent>
         <artifactId>eulixplatform-services</artifactId>
         <groupId>xyz.eulix.platform.services</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.13</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eulixplatform-registry</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <!--common包-->
         <dependency>
             <groupId>xyz.eulix.platform.services</groupId>
             <artifactId>eulixplatform-common</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.13</version>
         </dependency>
 
         <dependency>
