--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,6 @@ sonarqube-check-push:
   script: 
     - mvn $MAVEN_CLI_OPTS test-compile
     - mvn $MAVEN_CLI_OPTS sonar:sonar -Dsonar.projectKey=eulixplatform-services -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.branch.name=$CI_COMMIT_BRANCH
-  allow_failure: true
 
 sonarqube-check-mr:
   rules:
@@ -42,8 +41,7 @@ sonarqube-check-mr:
     GIT_DEPTH: "0" 
   script: 
     - mvn $MAVEN_CLI_OPTS test-compile
-    - mvn $MAVEN_CLI_OPTS sonar:sonar -Dsonar.projectKey=eulixplatform-services -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.pullrequest.key=$CI_MERGE_REQUEST_ID -Dsonar.pullrequest.branch=$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME -Dsonar.pullrequest.base=$CI_MERGE_REQUEST_TARGET_BRANCH_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME
-  allow_failure: true
+    - mvn $MAVEN_CLI_OPTS sonar:sonar -Dsonar.projectKey=eulixplatform-services -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.pullrequest.key=$CI_MERGE_REQUEST_IID -Dsonar.pullrequest.branch=$CI_MERGE_REQUEST_SOURCE_BRANCH_NAME -Dsonar.pullrequest.base=$CI_MERGE_REQUEST_TARGET_BRANCH_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.gitlab.ping_user=$GITLAB_USER_LOGIN -Dsonar.gitlab.max_blocker_issues_gate=-1 -Dsonar.gitlab.max_critical_issues_gate=-1 -Dsonar.gitlab.comment_no_issue=true -Dsonar.gitlab.disable_inline_comments=true -Dsonar.gitlab.only_issue_from_commit_file=false -Dsonar.gitlab.only_issue_from_commit_line=true -Dsonar.gitlab.disable_global_comment=false -Dsonar.gitlab.failure_notification_mode=commit-status -Dsonar.gitlab.quality_gate_fail_mode=NONE -Dsonar.gitlab.merge_request_discussion=false -Dsonar.gitlab.fail_on_qualitygate=false -Dsonar.gitlab.build_init_state=running
 
 validate:build:
   stage: validate
