--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,6 +83,8 @@ validate:test:
   artifacts:
     paths:
       - target/site/jacoco/
+    reports:
+      license_scanning: target/site/jacoco/index.html
     expose_as: 'JacocoReport'
     expire_in: 1 mos
 
