--- a/eulixplatform-registry/src/main/docker/Dockerfile.legacy-jar
+++ b/eulixplatform-registry/src/main/docker/Dockerfile.legacy-jar
@@ -35,7 +35,7 @@
 # docker run -i --rm -p 8080:8080 -p 5005:5005 -e JAVA_ENABLE_DEBUG="true" eulix/eulixplatform-services-legacy-jar
 #
 ###
-FROM registry.eulix.xyz/collab/infra/infrastructure/ubi8/ubi-minimal:8.3
+FROM redhat/ubi8-minimal:8.7-1085
 
 ARG JAVA_PACKAGE=java-11-openjdk-headless
 ARG RUN_JAVA_VERSION=1.3.8
