--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>xyz.eulix.platform.services</groupId>
-    <artifactId>eulixplatform-services</artifactId>
+    <artifactId>eulixplatform-base</artifactId>
     <packaging>pom</packaging>
     <version>1.8.0</version>
 
