--- a/eulixplatform-common/pom.xml
+++ b/eulixplatform-common/pom.xml
@@ -19,7 +19,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>eulixplatform-services</artifactId>
+        <artifactId>eulixplatform-base</artifactId>
         <groupId>xyz.eulix.platform.services</groupId>
         <version>1.8.0</version>
     </parent>
