--- a/eulixplatform-registry/pom.xml
+++ b/eulixplatform-registry/pom.xml
@@ -19,7 +19,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <parent>
-        <artifactId>eulixplatform-services</artifactId>
+        <artifactId>eulixplatform-base</artifactId>
         <groupId>xyz.eulix.platform.services</groupId>
         <version>1.8.0</version>
     </parent>
